cmdsforsale.buyexempt added, still trying for fix yml

--- a/src/plugin.yml
+++ b/src/plugin.yml
@@ -18,4 +18,13 @@ commands:
     description: Holds the commands for admin-only functions
     permission: cmdsforsale.moderator
     aliases: cfs
+permissions:
+  cmdsforsale.moderator
+    description: Gives access to all commands and admin functions
+    default: false
+    children:
+      cmdsforsale.buyexempt
+  cmdsforsale.buyexempt
+    description: Makes it so the player does not need to buy commands
+    default: false
 softdepend: [Vault]
