--- a/src/plugin.yml
+++ b/src/plugin.yml
@@ -1,7 +1,7 @@
 name: CommandsForSale
 description: 'Allows the purchasing and protecting of commands'
-version: 1.2.2
-author: 'Tecno_Wizard'
+version: 1.2.5
+author: 'Many thanks to Tecno_Wizard, new Owner ekclifford'
 main: me.Tecno_Wizard.CommandsForSale.core.Main
 commands:
   buycmd:
